--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -22,7 +22,8 @@
 hr {
     border: 1px solid;
     margin-block-end: 10px;
-    padding-block: 5px;
+    padding-block: 2px;
+    background-color: #088b43;
 }
 .settings {
     display: block;
@@ -31,6 +32,11 @@ hr {
 }
 .friends {
     margin-block-start: 10px;
+}
+.friend {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .friends__title {
     display: block;
@@ -46,6 +52,10 @@ hr {
 .friend__image {
     width: 50px;
     height: 50px;
+    margin-block-end: 5px;
     background-color: #fcab5b;
     border-radius: 50%;
+}
+.friend__name {
+
 }
