--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -13,7 +13,8 @@
 .describe__profile__image {
     position: relative;
     height: 150px;
-    flex-basis: 20%;
+	min-width: 190px;
+    flex-shrink: 0;
     margin-inline: 10px;
 }
 .describe__profile__image img {
