--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,3 @@
-.content {
-    grid-area: main;
-    background-color: rgb(42, 47, 66);
-}
 .content__background {
     background-size: contain;
     width: 100%;
@@ -13,7 +9,9 @@
 .describe__profile__image {
     position: relative;
     height: 150px;
-	min-width: 190px;
+    width: 150px;
+    border-radius: 60%;
+    background-color: #fcab5b;
     flex-shrink: 0;
     margin-inline: 10px;
 }
@@ -21,7 +19,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 85%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 60%;
@@ -32,7 +30,9 @@
     flex-direction: column;
     justify-content: center;
 }
-
+.describe__profile__inform h2 {
+    font-size: clamp(16px, 5vw, 30px);
+}
 .content > :not(:last-child) {
     margin-block-end: 10px;
 }
