--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,8 +1,25 @@
 .sidebar {
-    height: 100%;
+    min-height: 100vh;
     grid-area: sidebar;
     background-color: #154973;
 }
+
+@media (max-width: 767px) {
+	.sidebar {
+		display: none;
+	}
+    .sidebar_active {
+        display: block;
+        position: relative;
+        z-index: 11;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 200px;
+        background-color: #154973e8;
+    }
+}
+
 .menu {
     margin: 15px;
     font-size: 20px;
@@ -10,24 +27,25 @@
 .menu > :not(:last-child) {
     margin-bottom: 10px;
 }
-.item:hover {
-    background-color: #797775;
+.menu *:hover {
+    background-color: #79777583;
 }
-.item:active {
-    background-color: #1c593c;
+.menu li a {
+    display: block;
+    padding-inline: 5px;
 }
-.item {
-    padding-block: 5px;
+.item a {
+    color: #ddaa4c;
 }
 hr {
     border: 1px solid;
     margin-block-end: 10px;
     padding-block: 2px;
-    background-color: #088b43;
+    background-color: rgba(171, 169, 169, 0.466);
 }
 .settings {
     display: block;
-    font-size: 30px;
+    font-size: clamp(16px, 5vw, 30px);
     margin-inline-start: 10px;
 }
 .friends {
@@ -40,7 +58,7 @@ hr {
 }
 .friends__title {
     display: block;
-    font-size: 50px;
+    font-size: clamp(18px, 7vw, 40px);
     font-weight: 200;
     text-align: center;
 }
@@ -57,5 +75,4 @@ hr {
     border-radius: 50%;
 }
 .friend__name {
-
 }
