--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,7 @@
     top: 0;
     left: 0;
     right: 0;
+	box-shadow: 0px 3px 5px rgba(186, 63, 18, 0.512);
 }
 .header__wrapper {
     height: 100%;
@@ -22,7 +23,6 @@
     width: 50px;
     border-radius: 50%;
     cursor: pointer;
-	padding-inline: 20px;
 }
 
 @media (max-width: 767px) {
