--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,7 @@
 .content__background {
     background-size: contain;
     width: 100%;
-    height: 20%;
+    height: 200px;
 }
 .describe__profile {
     display: flex;
@@ -13,7 +13,7 @@
     border-radius: 60%;
     background-color: #fcab5b;
     flex-shrink: 0;
-    margin-inline: 10px;
+    margin: 10px;
 }
 .describe__profile__image img {
     position: absolute;
