--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -14,7 +14,7 @@
         z-index: 11;
         left: 0;
         top: 0;
-        height: 100%;
+        min-height: 100vh;
         width: 200px;
         background-color: #154973e8;
     }
@@ -36,8 +36,8 @@
     display: block;
     padding-inline: 5px;
 }
-._active {
-    color: #ddaa4c;
+.activeLink {
+    color: gold;
 }
 hr {
     border: 1px solid;
