--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,4 +1,3 @@
-
 h1 {
     font-size: clamp(16px, 5vw, 30px);
     margin-block-start: 10px;
@@ -7,9 +6,7 @@ h1 {
 .wrapper__dialogs_contact {
     display: flex;
 }
-.dialogs_contact__name ul li {
-    list-style-type: disc;
-}
+
 .dialogs_contact__name {
     padding-inline-start: 40px;
     width: 30%;
@@ -17,40 +14,43 @@ h1 {
 }
 .dialogs_contact__name ul {
 }
+.dialogs_contact__name ul li {
+    list-style-type: disc;
+}
 .dialogs_contact__name ul li:not(:last-child) {
     margin-block-end: 40px;
 }
 .dialogs_contact__name ul li div {
     display: flex;
 }
-.dialogs_contact__name ul li .block,
-.dialogs_contact__name ul li .delete,
-.dialogs_contact__name ul li .online {
+
+.dialogs_contact__messages {
+    border-left: 2px solid #ddaa4c;
+    width: 70%;
+}
+
+.block,
+.delete,
+.online {
     width: 15px;
     height: 15px;
     align-self: center;
     border-radius: 50%;
     margin-inline-end: 5px;
 }
-.dialogs_contact__name ul li .online {
+.online {
     margin-inline-start: 5px;
 }
-.dialogs_contact__name ul li .block {
+.block {
     margin-left: auto;
 }
-.dialogs_contact__messages {
-    border-left: 2px solid #ddaa4c;
-    width: 70%;
-}
-.activeLink {
-    font-size: 20px;
-    color: #ddaa4c;
-}
+
 .contact__messages_item {
     display: flex;
     margin-block-end: 20px;
     margin-inline-start: 10px;
     padding: 15px 0px;
+    position: relative;
 }
 .messages_itemImg {
     margin-block-start: -10px;
@@ -101,5 +101,14 @@ h1 {
 }
 #messages_item__author {
     font-size: 12px;
+    font-weight: 550;
+}
+
+.activeLink {
+    font-size: 20px;
+    color: #ddaa4c;
+}
+.data {
+    font-size: 8px;
     font-weight: 550;
 }
