--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,10 +1,11 @@
+
 h2 {
     margin-bottom: 30px !important;
 }
 
 .new__post {
-    height: 190px;
-    margin: 10px;
+    height: 170px;
+    margin-block-end: 10px;
     position: relative;
 }
 .new__post__title {
