--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-    min-height: 100vh;
+    height: 100%;
     grid-area: sidebar;
     background-color: #154973;
 }
@@ -14,7 +14,7 @@
         z-index: 11;
         left: 0;
         top: 0;
-        min-height: 100vh;
+        height: 100%;
         width: 200px;
         background-color: #154973e8;
     }
