--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -3,112 +3,36 @@ h1 {
     margin-block-start: 10px;
     margin-block-end: 20px;
 }
+li {
+    list-style-type: none !important;
+}
+
 .wrapper__dialogs_contact {
     display: flex;
 }
-.dialogs_contact__name {
-    padding-inline-start: 40px;
-    width: 30%;
+.dialogs_name {
+    padding-inline-start: 10px;
+    width: 20%;
     margin-inline-end: 10px;
 }
-.dialogs_contact__name ul {
+.dialogs_name ul {
 }
-.dialogs_contact__name ul li {
+
+.dialogs_name ul li {
     list-style-type: disc;
 }
-.dialogs_contact__name ul li:not(:last-child) {
-    margin-block-end: 40px;
-}
-.dialogs_contact__name ul li div {
-    display: flex;
-}
-
-.dialogs_contact__messages {
-    border-left: 2px solid #ddaa4c;
-    width: 70%;
-}
-.block,
-.delete,
-.online {
-    width: 15px;
-    height: 15px;
-    align-self: center;
-    border-radius: 50%;
-    margin-inline-end: 5px;
-}
-.online {
-    margin-inline-start: 5px;
-}
-.block {
-    margin-left: auto;
-}
-
-#messages_item__author {
-    font-size: 12px;
-    font-weight: 550;
-}
-.activeLink {
-    font-size: 20px;
-    color: #ddaa4c;
-}
-
-.contact__messages_item {
-    display: flex;
+.dialogs_name ul li:not(:last-child) {
     margin-block-end: 20px;
-    margin-inline-start: 10px;
-    padding: 15px 0px;
-    position: relative;
 }
-.messages_itemImg {
-    margin-block-start: -10px;
-    flex-shrink: 0;
-    width: 60px;
-    height: 60px;
-    background-color: #fcab5b;
-    border-radius: 50%;
+.dialogs_name ul li div {
     display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
-.messages_itemImg img {
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    top: 0;
-    left: 0;
+.dialogs_messages_ask {
+    border-left: 2px solid #ddaa4c;
+    width: 40%;
 }
 
-.massages_itemText {
-    padding: 10px;
-    margin-inline-start: 30px;
-    background-color: rgba(171, 169, 169, 0.466);
-    flex-basis: 350px;
-    height: auto;
-    border: 2px solid #fcab5b;
-    border-radius: 15px;
-    line-height: 150%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
-}
-.massages_itemText p {
-}
-.massages_itemText::before {
-    position: absolute;
-    content: "";
-    width: 25px;
-    height: 25px;
-    border-top: 2px solid #ddaa4c;
-    border-right: 2px solid #ddaa4c;
-    top: 0;
-    left: -20px;
-    transform: rotate(-140deg);
-}
-.data {
-    font-size: 8px;
-    font-weight: 550;
+.dialogs_messages_answer {
+    width: 40%;
 }
