--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -6,7 +6,9 @@ h1 {
 li {
     list-style-type: none !important;
 }
-
+main {
+    position: relative;
+}
 .wrapper__dialogs_contact {
     display: flex;
 }
@@ -35,4 +37,35 @@ li {
 
 .dialogs_messages_answer {
     width: 40%;
+}
+.textDialog {
+    display: flex;
+    flex-direction: column;
+}
+form {
+	display: flex;
+	justify-content: flex-end;
+	flex-wrap: wrap;
+}
+.inputText {
+	display: inline-block;
+    width: 100%;
+    height: 60px;
+    margin-block: 50px 10px;
+    padding: 10px;
+}
+.sendText {
+    width: 100px;
+    height: 35px;
+    font-size: 20px;
+    background-color: #088b53;
+    border-radius: 10px;
+    align-self: flex-end;
+    transition: transform 0.3 ease;
+}
+.sendText:hover {
+    transform: scale(1.1);
+}
+.sendText:active {
+    transform: scale(1);
 }
