--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,6 +31,7 @@
         position: relative;
         width: 30px;
         height: 20px;
+		cursor: pointer;
     }
     .menuBurger::before,
     .menuBurger::after {
