correct Dialogs and refactoring

--- a/src/components/Dialogs/ContactItem/Contact.module.css
+++ b/src/components/Dialogs/ContactItem/Contact.module.css
@@ -41,8 +41,7 @@
     left: 0;
 }
 .activeLink {
-    font-size: 20px;
-    color: #ddaa4c;
+    color: gold;
 }
 .dialog {
     padding-block: 15px;
