--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -43,12 +43,12 @@ main {
     flex-direction: column;
 }
 form {
-	display: flex;
-	justify-content: flex-end;
-	flex-wrap: wrap;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
 }
 .inputText {
-	display: inline-block;
+    display: inline-block;
     width: 100%;
     height: 60px;
     margin-block: 50px 10px;
@@ -59,6 +59,7 @@ form {
     height: 35px;
     font-size: 20px;
     background-color: #088b53;
+    color: white;
     border-radius: 10px;
     align-self: flex-end;
     transition: transform 0.3 ease;
