--- a/src/components/UsersContainer/Users.module.css
+++ b/src/components/UsersContainer/Users.module.css
@@ -2,6 +2,21 @@
     padding: 10px;
     position: relative;
 }
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-block-end: 10px;
+}
+.pagination span:not(:last-child) {
+    margin-inline-end: 5px;
+}
+.pagination span {
+	cursor: pointer;
+}
+.selectedPage {
+    color: gold;
+    font-weight: 700;
+}
 .wrapperUser {
     margin-inline-start: 30px;
     display: flex;
@@ -68,7 +83,7 @@
     margin-bottom: 3px;
 }
 .addUsers {
-	display: block;
+    display: block;
     width: 150px;
     height: 50px;
     background-color: #088b53;
