--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,8 +21,20 @@
 }
 .header__wrapper img {
     width: 50px;
+	height: 50px;
     border-radius: 50%;
     cursor: pointer;
+}
+.loginBlock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: green;
 }
 
 @media (max-width: 767px) {
@@ -31,7 +43,7 @@
         position: relative;
         width: 30px;
         height: 20px;
-		cursor: pointer;
+        cursor: pointer;
     }
     .menuBurger::before,
     .menuBurger::after {
