--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,13 @@ h6 {
 
 @media (max-width: 850px) {
     .wrapper {
-        grid-template: minmax(60px, auto) 1fr/1fr;
+        grid-template-rows: minmax(60px, auto) 1fr;
+		grid-template-columns: 0;
         grid-column-gap: 0;
         margin: 0 auto;
     }
     .wrapper-content {
-        grid-column: 1 / -1;
+        /* grid-column: 1 / -1; */
     }
 }
 .wrapper-content {
