--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,24 +17,30 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 .header__wrapper img {
     width: 50px;
-	height: 50px;
+    height: 50px;
     border-radius: 50%;
     cursor: pointer;
 }
-.loginBlock {
+.login {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin-left: auto;
     margin-right: 10px;
     border-radius: 50%;
     width: 50px;
-    height: 50px;
-    background-color: green;
+}
+.logout {
+    width: 100%;
+    background-color: red;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 @media (max-width: 767px) {
@@ -44,6 +50,7 @@
         width: 30px;
         height: 20px;
         cursor: pointer;
+        margin-left: auto;
     }
     .menuBurger::before,
     .menuBurger::after {
