--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -30,7 +30,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-left: auto;
+    margin-right: auto;
     margin-right: 10px;
     border-radius: 50%;
     width: 50px;
