--- a/src/components/Profile/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/Profile/ProfileInfo.module.css
@@ -5,8 +5,10 @@
 }
 .describe__profile {
     display: flex;
+    position: relative;
     margin-block-end: 10px !important;
 }
+
 .describe__profile__image {
     position: relative;
     height: 150px;
@@ -16,7 +18,25 @@
     flex-shrink: 0;
     margin: 10px;
 }
+.profileInform {
+    display: flex;
+}
+.wrapperPhotoButtonProfile {
+
+}
+.mainPhoto {
+    cursor: pointer;
+}
+.wrapperPhotoButtonProfile:hover .photoButton {
+    display: block;
+}
+.photoButton {
+    display: none;
+    position: absolute;
+    z-index: 15;
+}
 .describe__profile__image img {
+    z-index: 10;
     position: absolute;
     top: 0;
     left: 0;
@@ -35,13 +55,19 @@
     font-size: clamp(16px, 5vw, 30px);
 }
 .wrapperStatus {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 .status input {
     vertical-align: middle;
-	padding: 5px;
+    padding: 5px;
 }
 .status:first-child {
-	cursor: pointer;
+    cursor: pointer;
+}
+
+@media (max-width: 765px) {
+    .profileInform {
+        flex-direction: column;
+    }
 }
