--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ h6 {
 @media (max-width: 765px) {
     .wrapper {
         grid-template-rows: minmax(60px, auto) 1fr;
-		grid-template-columns: 0;
+        grid-template-columns: 0;
         grid-column-gap: 0;
         margin: 0 auto;
     }
@@ -74,4 +74,13 @@ h6 {
     min-height: 100vh;
     background-color: #343a40;
     position: relative;
+}
+.error {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 25px;
 }
